--- a/server/package.json
+++ b/server/package.json
@@ -24,7 +24,10 @@
   "scripts": {
     "start": "node server.js",
     "dev": "nodemon server.js",
-    "test": "jest --watchAll"
+    "test": "jest --watchAll",
+    "seed": "node seed.js",
+    "seed:users": "node seed.js --users",
+    "seed:clean": "node seed.js --clean"
   },
   "dependencies": {
     "bcryptjs": "^3.0.3",
