Real-Time Chat App Production Ready

--- a/client/.env.example
+++ b/client/.env.example
@@ -1,17 +1,71 @@
+# ========================================
 # Client Environment Variables
+# ========================================
+# 
+# IMPORTANT: Copy this file to .env for local development
+# For production (Vercel), set these in the Vercel dashboard
+#
+# DO NOT commit .env file to git!
+# ========================================
 
-# API Base URL (backend server URL)
-# Development: http://localhost:5000/api
-# Production: https://your-app-name.onrender.com/api
-VITE_API_URL=http://localhost:5000/api
+# ----------------------------------------
+# API Configuration
+# ----------------------------------------
 
-# Socket.io Server URL (backend server URL without /api)
-# Development: http://localhost:5000
-# Production: https://your-app-name.onrender.com
+# API Base URL (backend server URL with /api suffix)
+# 
+# Local Development:
+# VITE_API_URL=http://localhost:5000/api
+#
+# Production (Render):
+VITE_API_URL=https://real-time-chatapp-p0m1.onrender.com/api
+#
+# Replace with YOUR backend URL from Render
+# VITE_API_URL=http://localhost:5000/api
+
+# ----------------------------------------
+# Socket.io Configuration
+# ----------------------------------------
+
+# Socket.io Server URL (backend server URL WITHOUT /api suffix)
+#
+# Local Development:
+# VITE_SOCKET_URL=http://localhost:5000
+#
+# Production (Render):
+# VITE_SOCKET_URL=https://real-time-chatapp-p0m1.onrender.com
+#
+# Replace with YOUR backend URL from Render (NO /api at the end)
 VITE_SOCKET_URL=http://localhost:5000
 
-# Application Name (optional)
+# ----------------------------------------
+# Application Settings
+# ----------------------------------------
+
+# Application display name
 VITE_APP_NAME=Real-Time Chat App
 
-# Environment
+# Environment mode
+# Development: development
+# Production: production
 VITE_NODE_ENV=development
+
+# ----------------------------------------
+# Production Deployment Instructions
+# ----------------------------------------
+#
+# For Vercel Deployment:
+# 1. Go to https://vercel.com
+# 2. Import your GitHub repository
+# 3. Set Root Directory to: client
+# 4. Add these environment variables in Vercel dashboard:
+#
+#    VITE_API_URL=https://real-time-chatapp-p0m1.onrender.com/api
+#    VITE_SOCKET_URL=https://real-time-chatapp-p0m1.onrender.com
+#    VITE_APP_NAME=Real-Time Chat App
+#    VITE_NODE_ENV=production
+#
+# 5. Deploy!
+#
+# Note: Replace the URLs above with YOUR actual Render backend URL
+# ----------------------------------------
