--- a/client/.env.example
+++ b/client/.env.example
@@ -43,7 +43,7 @@ VITE_SOCKET_URL=http://localhost:5000
 # ----------------------------------------
 
 # Application display name
-VITE_APP_NAME=Real-Time Chat App
+VITE_APP_NAME=EmmiDev-Chat
 
 # Environment mode
 # Development: development
@@ -62,7 +62,7 @@ VITE_NODE_ENV=development
 #
 #    VITE_API_URL=https://real-time-chatapp-p0m1.onrender.com/api
 #    VITE_SOCKET_URL=https://real-time-chatapp-p0m1.onrender.com
-#    VITE_APP_NAME=Real-Time Chat App
+#    VITE_APP_NAME=EmmiDev-Chat
 #    VITE_NODE_ENV=production
 #
 # 5. Deploy!
