--- a/client/package.json
+++ b/client/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "socketio-chat-client",
+  "name": "emmidev-chat-client",
   "version": "1.1.0",
-  "description": "Real-time chat application client with React, Socket.io, and TailwindCSS",
+  "description": "EmmiDev-Chat - Real-time chat application client with React, Socket.io, and TailwindCSS",
   "keywords": [
     "react",
     "socket.io",
