--- a/server/package.json
+++ b/server/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "socketio-chat-server",
+  "name": "emmidev-chat-server",
   "version": "1.0.0",
-  "description": "Real-time chat application server with Socket.io, Express, and MongoDB",
+  "description": "EmmiDev-Chat - Real-time chat application server with Socket.io, Express, and MongoDB",
   "keywords": [
     "socket.io",
     "chat",
